@@ -1,8 +1,11 @@
 package com.youmu.utils;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Proxy;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Optional;
 import java.util.function.BiPredicate;
 
@@ -34,6 +37,12 @@ public abstract class ReflectUtils {
                     && !Modifier.isStatic(targetField.getModifiers())
                     && !Modifier.isFinal(targetField.getModifiers()) && !targetField.isSynthetic();
 
+    /**
+     * 递归从代理对象中获取源对象
+     * @param proxy
+     * @return
+     * @throws Exception
+     */
     public static Object getTargetDeep(Object proxy) throws Exception {
         Object target = proxy;
         while (true) {
@@ -45,6 +54,12 @@ public abstract class ReflectUtils {
         }
     }
 
+    /**
+     * 从代理对象中获取源对象
+     * @param proxy
+     * @return
+     * @throws Exception
+     */
     public static Object getTarget(Object proxy) throws Exception {
         if (null == proxy) {
             return null;
@@ -60,6 +75,12 @@ public abstract class ReflectUtils {
         return proxy;
     }
 
+    /**
+     * 获取Cglib代理对象中获取源对象(只支持spring实现
+     * @param proxy
+     * @return
+     * @throws Exception
+     */
     public static Object getCglibTarget(Object proxy) throws Exception {
         // 目前只支持spring的代理
         if (proxy instanceof SpringProxy) {
@@ -73,6 +94,12 @@ public abstract class ReflectUtils {
                 "unsupported cglib proxy class:" + proxy.getClass().getName());
     }
 
+    /**
+     * 获取jdk代理对象中获取源对象(只支持spring实现
+     * @param proxy
+     * @return
+     * @throws Exception
+     */
     public static Object getJdkTarget(Object proxy) throws Exception {
         Class proxyClass = proxy.getClass();
         Field h = ReflectionUtils.findField(proxyClass, "h");
@@ -85,27 +112,80 @@ public abstract class ReflectUtils {
         return getFieldForce(h, proxy);
     }
 
-    public static void setFieldForce(Field field, Object obj, Object value)
-            throws IllegalAccessException {
+    /**
+     * 给field设值，自动完成accessible
+     * @param field
+     * @param obj
+     * @param value
+     */
+    public static void setFieldForce(Field field, Object obj, Object value) {
         if (!Modifier.isPublic(field.getModifiers()) || !field.isAccessible()) {
             field.setAccessible(true);
         }
-        field.set(obj, value);
+        try {
+            field.set(obj, value);
+        } catch (IllegalAccessException e) {
+            throw new IllegalStateException(
+                    "Not allowed to access field '" + field.getName() + "': " + e);
+        }
     }
 
-    public static Object getFieldForce(Field field, Object obj) throws IllegalAccessException {
+    /**
+     * 根据属性名设值，自动完成accessible
+     * @param propertyName 属性名
+     * @param obj 设值的对象
+     * @param value 值
+     */
+    public static void setFieldForce(String propertyName, Object obj, Object value) {
+        Field field = ReflectionUtils.findField(obj.getClass(), propertyName);
+        setFieldForce(field, obj, value);
+    }
+
+    /**
+     * 从field中获取值
+     * @param field
+     * @param obj
+     * @return
+     */
+    public static Object getFieldForce(Field field, Object obj) {
         if (!Modifier.isPublic(field.getModifiers()) || !field.isAccessible()) {
             field.setAccessible(true);
         }
-        return field.get(obj);
+        try {
+            return field.get(obj);
+        } catch (IllegalAccessException e) {
+            throw new IllegalStateException(
+                    "Not allowed to access field '" + field.getName() + "': " + e);
+        }
     }
 
+    /**
+     * 根据属性名获取值
+     * @param propertyName 属性名
+     * @param obj 设值的对象
+     * @return
+     */
+    public static Object getFieldForce(String propertyName, Object obj) {
+        Field field = ReflectionUtils.findField(obj.getClass(), propertyName);
+        return getFieldForce(field, obj);
+    }
+
+    /**
+     * 通过source生成tClass的对象，属性会被拷贝过去，可以通过converter来参与类型的转换
+     * @param source
+     * @param tClass
+     * @param converter
+     * @param <S>
+     * @param <T>
+     * @return
+     */
     public static <S, T> T copyProperties(S source, Class<T> tClass,
             TriFunction<Field, Field, Object, Object> converter) {
         final T t;
         try {
-            t = tClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            t = tClass.getConstructor().newInstance();
+        } catch (IllegalAccessException | NoSuchMethodException | InvocationTargetException
+                | InstantiationException e) {
             logger.error("", e);
             throw new RuntimeException(e);
         }
@@ -113,12 +193,47 @@ public abstract class ReflectUtils {
         return t;
     }
 
+    /**
+     * 通过source生成tClass的对象，属性会被拷贝过去
+     * look{@link ReflectUtils#copyProperties(java.lang.Object, java.lang.Class, TriFunction)}
+     * @param source
+     * @param tClass
+     * @param <S>
+     * @param <T>
+     * @return
+     */
+    public static <S, T> T copyProperties(S source, Class<T> tClass) {
+        return copyProperties(source, tClass, null);
+    }
+
+    /**
+     * 属性拷贝source->target，可以通过converter来参与类型的转换
+     * @param source
+     * @param target
+     * @param converter
+     * @param <S>
+     * @param <T>
+     */
     public static <S, T> void copyProperties(S source, T target,
             TriFunction<Field, Field, Object, Object> converter) {
         copyProperties(source, target, defaultCopyPredicate, converter);
     }
 
     /**
+     * 属性拷贝source->target look
+     * {@link ReflectUtils#copyProperties(java.lang.Object, java.lang.Object, cn.ucmed.yilian.common.utils.ReflectUtils.TriFunction)}
+     * @param source
+     * @param target
+     * @param <S>
+     * @param <T>
+     */
+    public static <S, T> void copyProperties(S source, T target) {
+        copyProperties(source, target, null);
+    }
+
+    /**
+     * 属性拷贝source->target， 可以通过copyPredicate（泛型参数1：源field，泛型参数2：目标field）来判断是否拷贝此属性，
+     * 可以通过converter（泛型参数1：源field，泛型参数2：目标field，泛型参数3：要传给目标的值，泛型4：返回值类型）来参与类型的转换
      * @param source
      * @param target
      * @param copyPredicate<sourceField,targetField> return true if copy,or ignore
@@ -157,6 +272,32 @@ public abstract class ReflectUtils {
 
     public static interface TriFunction<P1, P2, P3, R> {
         public R apply(P1 p1, P2 p2, P3 p3);
+    }
+
+    /**
+     * 可以顺序处理多个转换器
+     */
+    public static class ConvertersFunction implements TriFunction<Field, Field, Object, Object> {
+        List<TriFunction<Field, Field, Object, Object>> converters = new ArrayList<>();
+
+        public ConvertersFunction(TriFunction<Field, Field, Object, Object>... converters) {
+            if (null == converters) {
+                return;
+            }
+            for (int i = 0; i < converters.length; i++) {
+                TriFunction<Field, Field, Object, Object> converter = converters[i];
+                this.converters.add(converter);
+            }
+        }
+
+        @Override
+        public Object apply(Field field, Field field2, Object o) {
+            Object rtn = o;
+            for (TriFunction<Field, Field, Object, Object> converter : converters) {
+                rtn = converter.apply(field, field2, rtn);
+            }
+            return rtn;
+        }
     }
 
 }
